# crud

./: .gitignore  README.md  test.dbx
ast/: ast_annotate.ml  ast_error.ml  ast_error.mli  ast_lexer.mll  ast_parse.ml  ast_parse.mli  ast_parser.mly  ast_print.ml  crud_ast.ml  dune
cmd/: dune  test.ml
ir/: crud_ir.ml  dune  ir_error.ml  ir_print.ml  ir_xform.ml  ir_xform_defs.ml  ir_xform_dupes.ml  ir_xform_hashes.ml  ir_xform_transform.ml  ir_xform_types.ml
src/ast/: annotate.re  ast_annotate.ml  ast_annotate.mli  ast_annotate.re  ast_annotate.rei  ast_error.ml  ast_error.mli  ast_error.re  ast_parse.ml  ast_parse.mli  ast_parse.re  ast_parse.rei  ast_parser.mly  ast_print.ml  ast_print.mli  ast_print.re  ast_print.rei  ast_syntax.ml  ast_syntax.re  crud_ast.ml  crud_ast.re  dune  jbuild  lexer.mll  parse.re  parse.rei  parser.messages  parser.mly  print.re  print.rei  syntax.re
src/cmd/: jbuild  test.ml  test.re
src/ir/: crud_ir.ml  crud_ir.re  dune  ir_error.ml  ir_error.re  ir_print.ml  ir_print.re  ir_xform.ml  ir_xform.re  ir_xform_defs.ml  ir_xform_defs.re  ir_xform_dupes.ml  ir_xform_dupes.mli  ir_xform_dupes.re  ir_xform_hashes.ml  ir_xform_hashes.re  ir_xform_transform.ml  ir_xform_transform.re  ir_xform_transform_types.re  ir_xform_types.ml  jbuild  test.re
src/syntax/: jbuild  lexer.mll  parse.ml  parser.messages  parser.mly  syntax.ml  test.ml
