(ocamllex
    (modules ast_lexer)
)

(menhir
    (modules ast_parser)
    (flags --table)
)

;; update the messages with this command:
;;    menhir --unused-tokens --update-errors ast_parser.messages ast_parser.mly

;; run the stuff to make the messages module
;; (rule
;;     (targets ast_parser_messages.ml)
;;     (deps ast_parser.messages ast_parser.mly)
;;     (action
;;         (with-stdout-to ast_parser_messages.ml
;;             (run menhir --compile-errors ast_parser.messages ast_parser.mly))
;;     )
;; )

(library
    (name crud_ast)
    (synopsis "AST definition and parsing for crud")
    (libraries base stdio menhirLib)
    (preprocess (pps ppx_jane))
)
